[package]
name = "block_game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
cgmath = "0.18.0"
encase = { version = "0.6.1", features = ["cgmath"] }
pollster = "0.3.0"
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
